--- a/TransloaditSwift/Base.lproj/Main.storyboard
+++ b/TransloaditSwift/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TransloaditSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,38 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_4550" translatesAutoresizingMaskIntoConstraints="NO" id="tbL-Fr-nmL">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ohw-S0-ZVa">
+                                <rect key="frame" x="275" y="80" width="50" height="30"/>
+                                <state key="normal" title="Upload"/>
+                                <connections>
+                                    <action selector="didTapUpload:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uTb-zY-bfh"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="tbL-Fr-nmL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="3eZ-oi-3gm"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="tbL-Fr-nmL" secondAttribute="bottom" id="8Pe-lr-I2D"/>
+                            <constraint firstItem="tbL-Fr-nmL" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Cdx-MK-UZF"/>
+                            <constraint firstAttribute="trailing" secondItem="tbL-Fr-nmL" secondAttribute="trailing" id="H1G-tc-MKA"/>
+                            <constraint firstItem="tbL-Fr-nmL" firstAttribute="top" secondItem="ohw-S0-ZVa" secondAttribute="bottom" constant="-110" id="tQn-iI-lkf"/>
+                            <constraint firstItem="ohw-S0-ZVa" firstAttribute="centerX" secondItem="tbL-Fr-nmL" secondAttribute="centerX" id="xfx-gz-wpp"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="tbL-Fr-nmL" id="2Au-8i-xfN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="270" y="429"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="IMG_4550" width="5268" height="2340"/>
+    </resources>
 </document>
